# dsipy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build-on-demand.yml  code-format.yml  gha-build-feeds.yml  release.yml  reusable-build-dist.yml  tests.yml
dev/: docker-compose.yml
docs/: README.md
src/: .gitignore
src/dsipy/: __main__.py  app.py  requirements.txt
src/dsipy/apps/: key.py  vcard.py
src/dsipy/apps/connections/: app.py
src/dsipy/apps/feeds/: app.py
src/dsipy/apps/feeds/lib/: feed.py  markdown.py
src/dsipy/shared/: cli.py  file.py  publish.py  qr.py  security.py  utils.py  vcard.py
tests/: test_action_generate_keypair.py  test_generate_opml_from_vcards.py  test_key_app.py
