[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsipy"
version = "0.1.0"
description = "A CLI tool with subcommands for vCard, feeds, and connections processing"
authors = [{name = "Desvelao", email = "iamdesvelao@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer==0.21.1",
    "opyml==0.1.2",
    "vobject==0.9.6.1",
    "feedgen==1.0.0",
    "rfeed==1.1.1",
    "markdown==3.10.1",
    "pillow==10.3.0",
    "qrcode==7.4.2",
    "cryptography==46.0.5"
]

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages only in the `src` directory

[project.scripts]
dsipy = "dsipy:main_app"

[tool.black]
line-length = 88  # Maximum line length
target-version = ["py312"]  # Target Python version
skip-string-normalization = false  # Normalize string quotes
include = '\.pyi?$'  # Include Python files
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
